fix z-index on controls toolbar

--- a/src/app/calendar/calendar.component.less
+++ b/src/app/calendar/calendar.component.less
@@ -1,7 +1,7 @@
 mat-toolbar.controls-bar {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     font-size: 16px;
 
     .spacer {
